Frontend - Fixing image overlapping in deck list

--- a/frontend/src/style/sass/cards.sass
+++ b/frontend/src/style/sass/cards.sass
@@ -21,3 +21,11 @@
     p 
         margin: 10px
     
+
+
+.deck-image
+    max-width: 100%
+    img
+        width: 13vmin
+        height: 13vmin
+        max-width: 100%
